--- a/src/index.css
+++ b/src/index.css
@@ -2,101 +2,98 @@
 @tailwind components;
 @tailwind utilities;
 
-
-.bullet{
-    background-image: url("../src/assets/iphoneear.jpg");
+.bullet {
+  background-image: url("../src/assets/iphoneear.jpg");
 }
-.handleearphone{
-    background-image: url("../src/assets/handleearphone.jpg");
+.handleearphone {
+  background-image: url("../src/assets/handleearphone.jpg");
 }
-.drone{
-    background-image: url("../src/assets/drone.jpg");
+.drone {
+  background-image: url("../src/assets/drone.jpg");
 }
-.charger{
-    background-image: url("../src/assets/chargephone.jpg");
+.charger {
+  background-image: url("../src/assets/chargephone.jpg");
 }
 
-
-
-*.container{
-    width: 100%;
-    max-width: 1668px;
-    margin: 0 , auto;
-    padding: 15 10px;
+*.container {
+  width: 100%;
+  max-width: 1668px;
+  margin: 0, auto;
+  padding: 15 10px;
 }
 
 .dropdown {
-    position: relative;
-  }
-  
-  .category-button {
-    padding: 10px;
-  }
-  
-  .dropdown-menu {
-    position: absolute;
-    top: calc(100% + 5px); 
-    left: 0;
-    z-index: 10; 
-    border: 1px solid #ccc; 
-    border-radius: 4px; 
-    background-color: #fff; 
-    padding: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); 
-  }
-  
-  .dropdown {
-    position: relative;
-  }
-  
-  .category-button {
-    position: relative;
-    padding: 10px;
-  }
-  
-  .arrow {
-    position: absolute;
-    left: 80px;
-    top: 52%;
-    transform: translateY(-50%);
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-  }
-  
-  .arrow-up {
-    border-top: 5px solid black;
-  }
-  
-  .arrow-down {
-    border-bottom: 5px solid black;
-  }
-  
-  .dropdown-menu {
-    position: absolute;
-    top: calc(100% + 5px);
-    left: 0;
-    z-index: 10;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background-color: #fff;
-    padding: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  }
-  
-  .input:focus {
-    outline: none; 
-    box-shadow: 0 0 0 2px #3b82f6; 
+  position: relative;
 }
 
-input:focus{
-	border-color: inherit;
-    -webkit-box-shadow: none;
-	box-shadow: none;
+.category-button {
+  padding: 10px;
 }
 
-.imagePhone{
+.dropdown-menu {
+  position: absolute;
+  top: calc(100% + 5px);
+  left: 0;
+  z-index: 10;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff;
+  padding: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.dropdown {
+  position: relative;
+}
+
+.category-button {
+  position: relative;
+  padding: 10px;
+}
+
+.arrow {
+  position: absolute;
+  left: 80px;
+  top: 52%;
+  transform: translateY(-50%);
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+}
+
+.arrow-up {
+  border-top: 5px solid black;
+}
+
+.arrow-down {
+  border-bottom: 5px solid black;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: calc(100% + 5px);
+  left: 0;
+  z-index: 10;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff;
+  padding: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.input:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px #3b82f6;
+}
+
+input:focus {
+  border-color: inherit;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.imagePhone {
   background-image: url(../src/assets/mobile_prod1-1-400x400.jpg);
 }
 .slider-container {
@@ -112,8 +109,8 @@ input:focus{
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
 .slider::-webkit-slider-thumb {
@@ -142,3 +139,37 @@ input:focus{
   background-color: #4caf50;
   border-radius: 5px;
 }
+
+*.input {
+  outline: 0;
+  transition: border-color 0.3s ease;
+  box-sizing: border-box;
+}
+
+.input:focus {
+  border-top  : 1px solid #2695ff; 
+
+}
+
+.tooltip-container {
+  position: relative; 
+}
+
+/* .tooltip > title {
+  visibility: hidden; 
+  width: 120px;
+  background-color: red;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute; 
+  z-index: 1;
+  bottom: 125%; 
+  left: 50%; 
+  transform: translateX(-50%); 
+}
+
+.tooltip-container:hover .tooltip > title {
+  visibility: visible;
+} */
