--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,31 @@
 @tailwind utilities;
 
 
+.submenu {
+  visibility: hidden;
+  position: absolute;
+  display: none; 
+  bottom: 0;
+  top: 100px;
+  right: 150px;
+  background-color: red;
+  color: black;
+  z-index: 100;
+  width: 200px; /* Alt menünün genişliği */
+  height: 400px; /* Alt menünün yüksekliği */
+}
+li:hover .submenu {
+  visibility: visible;
+}
+.NavbarCard ul ~ li{
+  border: 2px solid black;
+  background-color: #0543EC;
+  height: 15px;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .bullet {
   background-image: url("../src/assets/iphoneear.jpg");
 }
@@ -307,6 +332,7 @@ input:focus {
     gap: 18px;
   }
   .onePoster{
+    
     display: flex;
     flex-direction: column;
     
@@ -324,6 +350,7 @@ input:focus {
   .salesPartPost{
     width: 550px;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     flex-direction: wrap;
 
@@ -335,13 +362,14 @@ input:focus {
   }
   /* //Posters// */
   .posterYelGree{
-    margin-left: -60px;
+    margin-left: 10px;
   }
   .posterTwo{
     margin-left: 10px;
     margin-top: -72px;
   }
   .bullet {
+    margin-left: 0px;
     width: 535px;
     height: 243px;
     background-image: url("../src/assets/535(1).jpg");
@@ -352,6 +380,7 @@ input:focus {
     background-image: url("../src/assets/535(6.jpg");
   }
   .drone {
+    margin-left: 0px;
     width: 535px;
     height: 341px;
     background-image: url("../src/assets/535(3).jpg");
@@ -366,25 +395,26 @@ input:focus {
     .first{
       display: flex;
       flex-direction: row;
-      margin-right: -150px;
       flex-wrap: wrap;
+      margin-left: -55px;
+      gap: 2;
     }
     .second{
       display: flex;
       flex-direction: row;
-      margin-right: -150px;
       flex-wrap: wrap;
     }
-    .PhonesAll{   
+    /* .PhonesAll{   
+      width: 672px;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       margin-left: -100px;
-    }
+    } */
     .allPhones{
       width: 250px;
       height: 400px;
-      margin-left: 40px;
+      margin-left: 3px;
     }
    
     .phoneBottom{
@@ -461,14 +491,15 @@ input:focus {
     border-radius: 49px;
   }
   /* //////////////////////////////////////////////////////////////////ArtAuction */
-  .posterYelGree{
+  .posterYelGreeArt{
     display: flex;
     flex-direction: column;
-    margin-left: 15px;
-    margin-top: 120px;
+    margin-left: -60px;
+    margin-top: -50px;
     gap: 5px;
   }
   .bulletArt{
+  
     width: 535px;
     height: 289px;
     background-image: url("../src/assets/ibid_art_banner1.jpg");
@@ -486,14 +517,43 @@ input:focus {
     align-items: center;
     gap: 18px;
   }
+  .salesPartArt{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    margin-left: -12px;
+    width: 258px;
+    height: 410px;
+    
+  }
+  .salesPartPostArt{
+    width: 550px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-direction: wrap;
+    margin-left: -65px;
+  }
   .PosterArt{
     width: 533px;
     height: 300px;
-    display: flex;
-    justify-content: center;
-    margin-left: -58px;
+    margin-left: -60px;
   }
- 
+  .lastFooter{
+    display: none;
+    margin-bottom: 180px;
+  }
+  .formFooter{
+    margin-top: 9px;
+    width: 330px;
+  }
+  .btnFilter{
+    margin-top: 9px;
+    width: 150px;
+    border-radius: 49px;
+  }
 }
 
 @media only screen and (min-width: 600px) {
