--- a/src/index.css
+++ b/src/index.css
@@ -502,7 +502,7 @@ input:focus {
   
     width: 535px;
     height: 289px;
-    background-image: url("../src/assets/ibid_art_banner1.jpg");
+    background-image: url("../src/assets/500benner.jpg");
   }
   .classicalArt{
     width: 535px;
